styles/style.css
:root{
    --backgroundColor: gray;
    --textBackground: black;
    --navBackground: hsl(175, 29%, 25%);
    --textColor: white;

}

#languageEn{
    display: none;
}

/* --------------- Color settings--------------*/

body{
    background-color: var(--backgroundColor);
}
a, li, h1, h2, p {
    color: var(--textColor);
}

h1{
    font-size: 3rem;
}

 /* --------------- Navigation--------------*/
nav{
    background-color: var(--navBackground);
    display: flex;
    justify-content: space-between;
    padding: 1rem;
}

.leftnav , .brightnessmode, .language , .rightnav, .rightnav ul{
    display: flex;
    flex-direction: row;
    align-items: center;
}

.leftnav img{
    margin-right: 1rem;
    max-height: 2rem;
    color: aliceblue;
    background-color: aqua;
    border-radius: 50%;
}
.leftnav a{
    padding-left: 1rem;
}
.rightnav li{
    padding-right: 1rem;
}

/* --------------- Wellcome part --------------*/
.wellcome{
    background-image: url("../images/shaking-hands-gebd90838e_1920.jpg");
    background-position: center;
    width: 100%;
    height: 18rem;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.wellcome h1{
    background-color: var(--textBackground);
    padding: 1rem;
    border-radius: 0.5rem;
    text-align: center;
}

